--- a/packages/_presentation_layer/pubspec.yaml
+++ b/packages/_presentation_layer/pubspec.yaml
@@ -12,14 +12,17 @@ dependencies:
     path: ../_core_layer
   _domain_layer:
     path: ../_domain_layer
+
+  bitsdojo_window: 0.1.2
     
-  faker: ^2.0.0
+  extended_text: ^9.1.0
+  file_selector: ^0.8.4+3
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
 
-  flutter_riverpod: any
+  flutter_riverpod: 2.0.0-dev.9
   intl: ^0.17.0
 
 dev_dependencies:
@@ -29,3 +32,8 @@ dev_dependencies:
     
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: MaterialSymbolsOutlined
+      fonts:
+        - asset: fonts/MaterialSymbolsOutlined.ttf
