--- a/packages/_core_layer/pubspec.yaml
+++ b/packages/_core_layer/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  riverpod: any
+  riverpod: 2.0.0-dev.9
 
 dev_dependencies:
   flutter_lints: ^2.0.1
