--- a/packages/_di_layer/pubspec.yaml
+++ b/packages/_di_layer/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     
   flutter:
     sdk: flutter
-  riverpod: any
+  riverpod: 2.0.0-dev.9
 
 dev_dependencies:
   flutter_lints: ^1.0.0
