--- a/packages/_domain_layer/pubspec.yaml
+++ b/packages/_domain_layer/pubspec.yaml
@@ -16,8 +16,10 @@ dependencies:
   freezed_annotation: ^2.0.3
   json_annotation: ^4.5.0
   meta: ^1.7.0
+  pubspec_parse: ^1.2.0
   riverpod: any
   uuid: ^3.0.6
+  yaml: ^3.1.1
 
 dev_dependencies:
   build_runner: ^2.1.10
