--- a/packages/_presentation_layer/l10n.yaml
+++ b/packages/_presentation_layer/l10n.yaml
@@ -3,3 +3,5 @@ arb-dir: lib/src/l10n
 template-arb-file: intl_en.arb
 output-localization-file: translations.dart
 output-class: Translations
+nullable-getter: false
+header: "//ignore_for_file: non_constant_identifier_names, unnecessary_brace_in_string_interps, unnecessary_string_escapes"
