--- a/packages/_service_layer/pubspec.yaml
+++ b/packages/_service_layer/pubspec.yaml
@@ -16,17 +16,12 @@ dependencies:
   faker: ^2.0.0
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.0.3
-  json_annotation: ^4.5.0
-  riverpod: any
+  riverpod: 2.0.0-dev.9
 
 dev_dependencies:
   build_runner: ^2.1.10
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  freezed: ^2.0.3+1
-  json_serializable: ^6.2.0
-  mockito: ^5.1.0
 
 flutter:
