--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: flutter_objectbox_layered_template
-description: Flutter Layered Template with ObjectBox Persistence
+name: l10n_app
+description: Localization App for Flutter Projects
 
 publish_to: 'none'
-version: 0.0.2
+version: 0.0.1
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -12,15 +12,17 @@ dependencies:
     path: ./packages/_di_layer
   _presentation_layer:
     path: ./packages/_presentation_layer
-    
+
+  bitsdojo_window: 0.1.2
+
   flutter:
     sdk: flutter
-  flutter_riverpod: any
+  flutter_riverpod: 2.0.0-dev.9
 
 dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-        
+  
 flutter:
   uses-material-design: true
