--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "flutter_layered_template",
+      "name": "flutter",
       "request": "launch",
       "type": "dart",
       "program": "lib/main.dart"
