--- a/packages/_domain_layer/pubspec.yaml
+++ b/packages/_domain_layer/pubspec.yaml
@@ -13,7 +13,11 @@ dependencies:
     
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+    
   freezed_annotation: ^2.0.3
+  intl: ^0.17.0
   json_annotation: ^4.5.0
   meta: ^1.7.0
   pubspec_parse: ^1.2.0
