--- a/packages/_domain_layer/pubspec.yaml
+++ b/packages/_domain_layer/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   riverpod: any
   uuid: ^3.0.6
   yaml: ^3.1.1
+  yaml_writer: ^1.0.1
 
 dev_dependencies:
   build_runner: ^2.1.10
