--- a/packages/_presentation_layer/pubspec.yaml
+++ b/packages/_presentation_layer/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
 
   flutter_riverpod: 2.0.0-dev.9
   intl: ^0.17.0
+  multi_split_view: ^2.1.0
+  split_view: ^3.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
