--- a/packages/_domain_layer/pubspec.yaml
+++ b/packages/_domain_layer/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   meta: ^1.7.0
   pubspec_parse: ^1.2.0
   riverpod: any
+  tuple: ^2.0.0
   uuid: ^3.0.6
   yaml: ^3.1.1
   yaml_writer: ^1.0.1
