--- a/packages/_presentation_layer/pubspec.yaml
+++ b/packages/_presentation_layer/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
     
   dotted_border: ^2.0.0+2
   extended_text: ^9.1.0
-  file_selector: ^0.8.4+3
+  file_selector: ^0.9.0
   flutter:
     sdk: flutter
   flutter_localizations:
