--- a/packages/_presentation_layer/l10n.yaml
+++ b/packages/_presentation_layer/l10n.yaml
@@ -2,3 +2,4 @@ arb-dir: 'lib/src/l10n'
 synthetic-package: false
 nullable-getter: false
 header: '//ignore_for_file: non_constant_identifier_names, unnecessary_brace_in_string_interps, unnecessary_string_escapes'
+untranslated-messages-file: 'lib/src/l10n/untranslated_messages.txt'
