--- a/packages/_core_layer/pubspec.yaml
+++ b/packages/_core_layer/pubspec.yaml
@@ -5,17 +5,20 @@ publish_to: 'none'
 version: 0.0.1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  meta: ^1.7.0
-  riverpod: 2.0.0-dev.9
+  meta: ^1.8.0
+  riverpod: ^2.1.1
+  riverpod_annotation: ^1.0.6
 
 dev_dependencies:
+  build_runner: ^2.3.2
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-    
+  riverpod_generator: ^1.0.6
+
 flutter:
