--- a/packages/_data_layer/pubspec.yaml
+++ b/packages/_data_layer/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 0.0.1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
   _core_layer:
@@ -16,16 +16,18 @@ dependencies:
   flutter:
     sdk: flutter
     
-  objectbox: ^1.6.0
-  objectbox_flutter_libs: ^1.6.0
+  objectbox: ^1.6.2
+  objectbox_flutter_libs: ^1.6.2
   path_provider: ^2.0.11    
-  riverpod: 2.0.0-dev.9
+  riverpod: ^2.1.1
+  riverpod_annotation: ^1.0.6
 
 dev_dependencies:
-  build_runner: ^2.1.10
+  build_runner: ^2.3.2
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  objectbox_generator: ^1.5.0
+  objectbox_generator: ^1.6.2
+  riverpod_generator: ^1.0.6
       
 flutter:
