--- a/packages/_di_layer/pubspec.yaml
+++ b/packages/_di_layer/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 0.0.1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
   _core_layer:
@@ -19,11 +19,15 @@ dependencies:
     
   flutter:
     sdk: flutter
-  riverpod: 2.0.0-dev.9
+  meta: ^1.8.0
+  riverpod: ^2.1.1
+  riverpod_annotation: ^1.0.6
 
 dev_dependencies:
-  flutter_lints: ^1.0.0
+  build_runner: ^2.3.2
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^1.0.6
     
 flutter:
