--- a/packages/_presentation_layer/pubspec.yaml
+++ b/packages/_presentation_layer/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 0.0.1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
   _core_layer:
@@ -13,24 +13,27 @@ dependencies:
   _domain_layer:
     path: ../_domain_layer
 
-  bitsdojo_window: 0.1.2
+  bitsdojo_window: ^0.1.5
     
-  dotted_border: ^2.0.0+2
-  extended_text: ^9.1.0
-  file_selector: ^0.9.0
+  dotted_border: ^2.0.0+3
+  extended_text: ^9.1.2
+  file_selector: ^0.9.2+2
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
 
-  flutter_riverpod: 2.0.0-dev.9
+  flutter_riverpod: ^2.1.1
   intl: ^0.17.0
+  riverpod_annotation: ^1.0.6
 
 dev_dependencies:
+  build_runner: ^2.3.2
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-    
+  riverpod_generator: ^1.0.6
+
 flutter:
   uses-material-design: true
 
